examples/test/testpolicy19824.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19824
  namespace: namespace115
spec:
  podSelector:
    matchLabels:
      key11: value25
      key5: value18
      key9: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value42
      podSelector:
        matchLabels:
          key9: value37
          key49: value49
          key45: value46
